* 0.158

- Add support for setting process name on Linux ppc64le.
- Add a Jetty SocketAddressResolver that doesn't dispatch address
  resolution to the executor for IP address literals.
- Rename HTTP client selector config parameter to "http-client.selector-count".

* 0.157

- Fix Kerberos SPNEGO handling in HTTP client.

* 0.156

- Add HTTP client selector thread count config.
- Always ask for client certificates in HTTP server.
- Decrease discovery refresh wait time at startup.
- Remove workaround for Jetty client Kerberos realm bug.
- Add security module with support for reading and writing PEM files and
  creating certificate signing requests.

* 0.155

- Remove LifeCycleManager shutdown hook when stop() is called.

* 0.154

- Upgrade to Airbase 74.
- Buffer log messages to improve throughput.

* 0.153

- Downgrade to Jetty 9.4.6.v20170531.

* 0.152

- Upgrade to Airbase 72.
- Add config for HTTP client timeout executor concurrency.

* 0.151

- Upgrade to Airbase 71.
- Upgrade to Jersey 2.26.
- Add instance sizes to HyperLogLog and SparseHll.
- Support SSL KeyManager password for HTTP server.

* 0.150

- Upgrade to Airbase 68.
- Upgrade to Jetty 9.4.7.v20170914.
- Prevent "Address already in use" for HTTP server.
- Remove @Inject from Logger.
- Add HTTP/2 input buffer size config.
- Add support for monitoring the Jetty client shared thread pool.
- Ensure Jetty client request doesn't live past synchronous return.
- Enable detailed dumps for Jetty thread pools, which will help getting
  more information when debugging with the JMX dump operation.
- Add support for PostgreSQL in dbpool.
- Delete FileUtils from testing module.
- Make HttpClientModule non-public.
- Cleanup dependencies for various modules.
- Skip duplicate rows when printing configuration in Bootstrap.
- Support generalized suffix in Java version strings.

* 0.149

- Upgrade to Jetty 9.4.6.v20170531
- Fix UnknownFormatConversionException for config errors.