@@ -121,6 +121,7 @@ public class JettyHttpClient
     private final long maxContentLength;
     private final long requestTimeoutMillis;
     private final long idleTimeoutMillis;
+    private final boolean recordRequestComplete;
     private final RequestStats stats = new RequestStats();
     private final CachedDistribution queuedRequestsPerDestination;
     private final CachedDistribution activeConnectionsPerDestination;
@@ -169,6 +170,7 @@ public class JettyHttpClient
         maxContentLength = config.getMaxContentLength().toBytes();
         requestTimeoutMillis = config.getRequestTimeout().toMillis();
         idleTimeoutMillis = config.getIdleTimeout().toMillis();
+        recordRequestComplete = config.getRecordRequestComplete();
 
         creationLocation.fillInStackTrace();
 
@@ -396,7 +398,9 @@ public class JettyHttpClient
             value = responseHandler.handle(request, jettyResponse);
         }
         finally {
-            recordRequestComplete(stats, request, requestStart, jettyResponse, responseStart);
+            if (recordRequestComplete) {
+                recordRequestComplete(stats, request, requestStart, jettyResponse, responseStart);
+            }
         }
         return value;
     }
@@ -411,7 +415,7 @@ public class JettyHttpClient
 
         HttpRequest jettyRequest = buildJettyRequest(request);
 
-        JettyResponseFuture<T, E> future = new JettyResponseFuture<>(request, jettyRequest, responseHandler, stats);
+        JettyResponseFuture<T, E> future = new JettyResponseFuture<>(request, jettyRequest, responseHandler, stats, recordRequestComplete);
 
         BufferingResponseListener listener = new BufferingResponseListener(future, Ints.saturatedCast(maxContentLength));
 
@@ -808,13 +812,15 @@ public class JettyHttpClient
         private final org.eclipse.jetty.client.api.Request jettyRequest;
         private final ResponseHandler<T, E> responseHandler;
         private final RequestStats stats;
+        private final boolean recordRequestComplete;
 
-        public JettyResponseFuture(Request request, org.eclipse.jetty.client.api.Request jettyRequest, ResponseHandler<T, E> responseHandler, RequestStats stats)
+        public JettyResponseFuture(Request request, org.eclipse.jetty.client.api.Request jettyRequest, ResponseHandler<T, E> responseHandler, RequestStats stats, boolean recordRequestComplete)
         {
             this.request = request;
             this.jettyRequest = jettyRequest;
             this.responseHandler = responseHandler;
             this.stats = stats;
+            this.recordRequestComplete = recordRequestComplete;
         }
 
         @Override
@@ -872,7 +878,9 @@ public class JettyHttpClient
                 value = responseHandler.handle(request, jettyResponse);
             }
             finally {
-                recordRequestComplete(stats, request, requestStart, jettyResponse, responseStart);
+                if (recordRequestComplete) {
+                    recordRequestComplete(stats, request, requestStart, jettyResponse, responseStart);
+                }
             }
             return value;
         }
