@@ -4,6 +4,7 @@
 - Add a Jetty SocketAddressResolver that doesn't dispatch address
   resolution to the executor for IP address literals.
 - Rename HTTP client selector config parameter to "http-client.selector-count".
+- Add an option to disable recording HTTP request complete information.
 
 * 0.157
 
